@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -23,12 +23,11 @@ import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.net.URL;
-
+import java.util.Locale;
 import org.apache.pulsar.functions.auth.KubernetesSecretsTokenAuthProvider;
 import org.apache.pulsar.functions.runtime.kubernetes.KubernetesRuntimeFactory;
-import org.apache.pulsar.functions.worker.WorkerConfig;
 import org.testng.annotations.Test;
 
 /**
@@ -53,7 +52,7 @@ public class WorkerApiV2ResourceConfigTest {
         assertEquals("sample/standalone/functions", wc.getPulsarFunctionsNamespace());
         assertEquals(3, wc.getNumFunctionPackageReplicas());
         assertEquals(TEST_NAME + "-worker", wc.getWorkerId());
-        assertEquals(new Integer(1234), wc.getWorkerPort());
+        assertEquals(Integer.valueOf(1234), wc.getWorkerPort());
     }
 
     @Test
@@ -65,7 +64,7 @@ public class WorkerApiV2ResourceConfigTest {
         assertEquals("test-function-metadata-topic", wc.getFunctionMetadataTopicName());
         assertEquals(3, wc.getNumFunctionPackageReplicas());
         assertEquals("test-worker", wc.getWorkerId());
-        assertEquals(new Integer(7654), wc.getWorkerPort());
+        assertEquals(Integer.valueOf(7654), wc.getWorkerPort());
         assertEquals(200, wc.getMaxPendingAsyncRequests());
     }
 
@@ -78,11 +77,13 @@ public class WorkerApiV2ResourceConfigTest {
         URL newK8SUrl = getClass().getClassLoader().getResource("test_worker_k8s_config.yml");
         WorkerConfig newK8SWc = WorkerConfig.load(newK8SUrl.toURI().getPath());
         assertEquals(newK8SWc.getFunctionRuntimeFactoryClassName(), KubernetesRuntimeFactory.class.getName());
-        assertEquals(newK8SWc.getFunctionAuthProviderClassName(), KubernetesSecretsTokenAuthProvider.class.getName());
+        assertEquals(newK8SWc.getFunctionAuthProviderClassName(),
+                KubernetesSecretsTokenAuthProvider.class.getName());
 
         URL legacyK8SUrl = getClass().getClassLoader().getResource("test_worker_k8s_legacy_config.yml");
         WorkerConfig legacyK8SWc = WorkerConfig.load(legacyK8SUrl.toURI().getPath());
-        assertEquals(legacyK8SWc.getFunctionAuthProviderClassName(), KubernetesSecretsTokenAuthProvider.class.getName());
+        assertEquals(legacyK8SWc.getFunctionAuthProviderClassName(),
+                KubernetesSecretsTokenAuthProvider.class.getName());
 
         URL overrideK8SUrl = getClass().getClassLoader().getResource("test_worker_k8s_auth_override_config.yml");
         WorkerConfig overrideK8SWc = WorkerConfig.load(overrideK8SUrl.toURI().getPath());
@@ -90,7 +91,7 @@ public class WorkerApiV2ResourceConfigTest {
 
         URL emptyOverrideUrl = getClass().getClassLoader().getResource("test_worker_auth_override_config.yml");
         WorkerConfig emptyOverrideWc = WorkerConfig.load(emptyOverrideUrl.toURI().getPath());
-        assertEquals(emptyOverrideWc.getFunctionAuthProviderClassName(),"org.apache.my.overridden.auth");
+        assertEquals(emptyOverrideWc.getFunctionAuthProviderClassName(), "org.apache.my.overridden.auth");
     }
 
     @Test
@@ -120,5 +121,21 @@ public class WorkerApiV2ResourceConfigTest {
         assertEquals(newK8SWc.getFunctionInstanceResourceGranularities().getDisk().longValue(), 10737418240L);
 
         assertTrue(newK8SWc.isFunctionInstanceResourceChangeInLockStep());
+    }
+
+    @Test
+    public void testPasswordsNotLeakedOnToString() throws Exception {
+        URL yamlUrl = getClass().getClassLoader().getResource("test_worker_config.yml");
+        WorkerConfig wc = WorkerConfig.load(yamlUrl.toURI().getPath());
+        assertFalse(wc.toString().toLowerCase(Locale.ROOT).contains("password"),
+                "Stringified config must not contain password");
+    }
+
+    @Test
+    public void testPasswordsPresentOnObjectMapping() throws Exception {
+        URL yamlUrl = getClass().getClassLoader().getResource("test_worker_config.yml");
+        WorkerConfig wc = WorkerConfig.load(yamlUrl.toURI().getPath());
+        assertTrue((new ObjectMapper().writeValueAsString(wc)).toLowerCase(Locale.ROOT).contains("password"),
+                "ObjectMapper output must include passwords for proper serialization");
     }
 }
